# share_handler

./: .gitignore  LICENSE  README.md
share_handler/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
share_handler/example/: .gitignore  README.md  pubspec.yaml
share_handler/lib/: share_handler.dart  shared_media.dart
share_handler/test/: share_handler_test.dart
share_handler_android/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
share_handler_android/android/: build.gradle  settings.gradle
share_handler_android/example/: .metadata  README.md  pubspec.yaml
share_handler_android/lib/: messages.g.dart  share_handler_android.dart
share_handler_android/pigeons/: messages.dart
share_handler_android/test/: share_handler_android_test.dart
share_handler_ios/: CHANGELOG.md  README.md  pubspec.yaml
share_handler_ios/example/: README.md  pubspec.yaml
share_handler_ios/ios/: share_handler_ios.podspec
share_handler_ios/lib/: share_handler_ios.dart
share_handler_ios/pigeons/: copyright.txt  messages.dart
share_handler_ios/test/: share_handler_ios_test.dart
share_handler_linux/: .gitignore  README.md  pubspec.yaml
share_handler_linux/linux/: CMakeLists.txt  share_handler_linux.cc
share_handler_linux/linux/include/share_handler/: share_handler_linux.h
share_handler_macos/: README.md  pubspec.yaml
share_handler_platform_interface/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
share_handler_web/: LICENSE  README.md  pubspec.yaml
share_handler_windows/: .gitignore  README.md  pubspec.yaml
(+85 files in other folders)
